<resources>

    <!-- Translation unnecessary -->

    <string name="placeholder">Placeholder</string>

    <!-- Text global -->

    <string name="app_name">PlantTactic</string>
    <string name="remember">Pamiętaj</string>
    <string name="settings">Ustawienia</string>
    <string name="termsAndConditions">Warunki użytkowania</string>
    <string name="fab_more_desc">Przycisk z rozwijanym menu</string>
    <string name="login_button_text">Zaloguj się</string>
    <string name="logout_button_text">Wyloguj się</string>

    <!-- Text related to fragments names -->

    <string name="homeF">Dom</string>
    <string name="loginF">Logowanie</string>
    <string name="registerF">Rejestracja</string>
    <string name="settingsF">Ustawienia</string>
    <string name="termsAndConditionsF">Warunki użytkowania</string>
    <string name="historyF">Historia</string>
    <string name="addRoomF">Dodaj pokój</string>
    <string name="addPotDeviceF">Dodaj Doniczkę</string>
    <string name="potDeviceF">Doniczka</string>

    <!-- Text related to Register fragment -->

    <string name="register_button_text">Rejestracja</string>
    <string name="register_hint">Nie masz konta?</string>
    <string name="register_text_button">Zarejestruj się.</string>

    <!-- Text related to Home fragment -->

    <string name="user_rooms_text">POKOJE</string>
    <string name="homeLogoDesc">Logo w górnej części HomeFragment</string>
    <string name="login_hint">Najpierw się zaloguj.</string>

    <!-- Text related to Add Room fragment -->

    <string name="room_name_text">Nazwa pokoju</string>
    <string name="room_photo_text">Zdjęcie</string>
    <string name="add_room_button">Dodaj pokój</string>

    <!-- Text related to Room fragment -->
    <string name="user_pot_devices_text">DONICZKI</string>
    <string name="menuitem_add">Dodaj doniczkę</string>
    <string name="menuitem_edit">Edytuj pokój</string>

    <!-- Text related to Add Device fragment -->

    <string name="device_name_text">Nazwa doniczki</string>
    <string name="device_photo_text">Zdjęcie</string>
    <string name="add_device_button">Dodaj doniczkę</string>

    <!-- Text related to Edit Room fragment -->

    <string name="button_edit_room_cancel">Anuluj</string>
    <string name="button_edit_room_save">Zapisz</string>
    <string name="button_edit_room_delete">USUŃ POKÓJ</string>
    <string name="edit_room_roomname">Nazwa pokoju</string>
    <string name="edit_room_newimage">Zdjecie pokoju</string>
    <string name="dialog_title">Usuń pokój</string>
    <string name="dialog_message">Ten pokój zostanie usunięty:</string>
    <string name="login_user_email">Email</string>
    <string name="login_user_password">Hasło</string>

    <!-- Text relared to Toast messages  -->
    <string name="logged_in">Zalogowano</string>
    <string name="account_created">Konto zostało utworzone</string>
    <string name="log_in_before">Najpierw się zaloguj</string>

</resources>