<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddPotDeviceFragment">

    <EditText
        android:id="@+id/edit_text_device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_name_text" />

    <EditText
        android:id="@+id/edit_text_device_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/device_photo_text" />

    <Button
        android:id="@+id/button_add_pot_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_device_button" />

</LinearLayout>