<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".fragments.RegisterFragment">

        <ImageView
            android:id="@+id/home_logo_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/homeLogoDesc"
            android:scaleType="centerCrop"
            android:src="@mipmap/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_username_view"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_logo_image"
            android:layout_marginBottom="6dp"
            android:hint="@string/login_user_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_password_view"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_username_view"
            android:layout_marginBottom="6dp"
            android:hint="@string/login_user_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/register_button_text" />


    </RelativeLayout>
</ScrollView>